--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,1 @@
-{"name":"backend","version":"1.0.0","main":"server.js","scripts":{"start":"node server.js"},"dependencies":{"bcryptjs":"^3.0.3","cors":"^2.8.5","dotenv":"^16.4.1","express":"^4.18.2","jsonwebtoken":"^9.0.3","mongoose":"^7.6.0","nodemailer":"^7.0.12"}}
+{"name":"backend","version":"1.0.0","main":"server.js","scripts":{"start":"node server.js"},"dependencies":{"bcryptjs":"^3.0.3","cors":"^2.8.5","dotenv":"^16.4.1","express":"^4.18.2","jsonwebtoken":"^9.0.3","mongoose":"^7.6.0","nodemailer":"^7.0.12","resend":"^6.7.0"}}
